--- a/story.html
+++ b/story.html
@@ -16,7 +16,7 @@
     <h2> <a href="index.html"><img src="home.png" width=50 height=50></a><br></h2>
     <h2> <a href="about.html"><img src="back.png" width=50 height=50></a><br></h2>
     <h1><b><u><center>STORY:</center></u></b></h1><br>
-    <h2>I have made a website for my friend who has an origami studio. he always wanted to show her creativity online.
+    <h2>I have made a website for my friend who has an origami studio. he always wanted to show his creativity online.
       So he has asked me to make a website.Here he wishes to explain step-by-step how origami is made. 
       Hope you all like it!</h2>
       <br><br>
